Add category management pages
